chgmgmt_build/src/objects/Organization__c.object
<CustomObject>
    <fields>
        <fullName>Field10__c</fullName>
        <label>組織有効開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>組織有効終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <label>県コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgID10__c</fullName>
        <label>組織ID10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgID11__c</fullName>
        <label>組織ID11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgID12__c</fullName>
        <label>組織ID12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgTypeID10__c</fullName>
        <label>組織タイプID10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgTypeID11__c</fullName>
        <label>組織タイプID11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgTypeID12__c</fullName>
        <label>組織タイプID12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentOrg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>親組織</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>組織</relationshipLabel>
        <relationshipName>Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>組織</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>組織ID</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>